--- a/_data/flashcards.yml
+++ b/_data/flashcards.yml
@@ -91,5 +91,18 @@
 -
   - το παντελόνι
   - le pantalon
-
-
+-
+  - τον
+  - du, le, la (article défini neutre génitif)
+-
+  - ποιανού
+  - à qui?
+-
+  - δεν
+  - ne... pas
+-
+  - εκείνο
+  - celui-là, ce... là (démonstratif d'éloignement au nominatif/accusatif neutre singulier)
+-
+  - το συρτάρι
+  - le tiroir
