--- a/_data/flashcards.yml
+++ b/_data/flashcards.yml
@@ -106,3 +106,102 @@
 -
   - το συρτάρι
   - le tiroir
+-
+  - ο άντρας
+  - le mari
+-
+  - ο κηπός
+  - le jardin
+-
+  - η γυναίκα
+  - la femme
+-
+  - ο κύριος
+  - le monsieur
+-
+  - ο μαθητής
+  - l'élève
+-
+  - ο φοιτητής
+  - l'étudiant
+-
+  - η φοιτήτρια
+  - l'étudiante
+-
+  - η κυριά
+  - la dame
+-
+  - το νοσοκομείο
+  - l'hopital
+-
+  - η γραμματεία
+  - le bureau
+-
+  - το λιμάνι
+  - le port
+-
+  - η γάτα
+  - le chat
+-
+  - ο σκύλος
+  - le chien
+-
+  - το χωριό
+  - le village
+-
+  - το πρωί
+  - le matin
+-
+  - το σπίτι
+  - la maison
+-
+  - η μέρα
+  - la jour
+-
+  - το γραφείο
+  - le bureau
+-
+  - η μαθήτρια
+  - l'élève (féminin)
+-
+  - το μουσείο
+  - le musée
+-
+  - η φίλη
+  - l'amie
+-
+  - η χώρα
+  - le pays
+-
+  - το ξενοδοχείο
+  - l'hotel
+-
+  - η οικογένεια
+  - la famille
+-
+  - η νύχτα
+  - la nuit
+-
+  - ο φίλος
+  - l'ami
+-
+  - το σχολείο
+  - l'école
+-
+  - η εθνικότητα
+  - la nationalité
+-
+  - η κόρη
+  - la fille (filiation)
+-
+  - ο γιος
+  - le fils (filiation)
+-
+  - το επώνυμο
+  - le nom de famile
+-
+  - το όνομα
+  - le prénom / idée générale pour le nom
+-
+  - το έπιπλο
+  - le meuble
