--- a/_data/flashcards.yml
+++ b/_data/flashcards.yml
@@ -1,11 +1,14 @@
 -
   - τι
+  - Τι έκανε η γάτα;
   - Quoi, que.
 -
   - το
+  - Το γάτι είναι στο τραπέζι.
   - le, la (article défini neutre singulier nominatif)
 -
   - όχι
+  - Η γιορτή του Όχι είναι στις 28 Οκτωβρίου
   - non
 -
   - ναι
@@ -15,6 +18,7 @@
   - alors
 -
   - το παιδί
+  - Ποιάνου είναι α
   - l'enfant
 -
   - το αγόρι
@@ -205,3 +209,51 @@
 -
   - το έπιπλο
   - le meuble
+-
+  - ο καθηγητής
+  - le professeur
+-
+  - η καθηγήτρια
+  - la professeure
+-
+  - το ατόμο
+  - la personne
+-
+  - το πράγμα
+  - la chose
+-
+  - ορίστε
+  - alors
+-
+  - το πρωί
+  - le matin
+-
+  - η γραματεία
+  - le secrétariat
+-
+  - η μέρα
+  - le jour
+-
+  - πριν
+  - avant
+-
+  - μετά
+  - après
+-
+  - το καλοκαίρι
+  - l'été
+-
+  - το νερό
+  - l'eau
+-
+  - το βράδυ
+  - la soirée
+-
+  - το τηλέφωνο
+  - le téléphone
+-
+  - το νησί
+  - l'ile
+-
+  - το ονείρο
+  - le rêve
