Dedupe + fix gramateia

--- a/_data/flashcards.yml
+++ b/_data/flashcards.yml
@@ -139,7 +139,7 @@
   - l'hopital
 -
   - η γραμματεία
-  - le bureau
+  - le secrétariat
 -
   - το λιμάνι
   - le port
@@ -158,9 +158,6 @@
 -
   - το σπίτι
   - la maison
--
-  - η μέρα
-  - la jour
 -
   - το γραφείο
   - le bureau
