--- a/_data/flashcards.yml
+++ b/_data/flashcards.yml
@@ -12,28 +12,34 @@
   - non
 -
   - ναι
+  - Ναι, εγώ είμαι ο Ζακ
   - oui
 -
   - λοιπόν
   - alors
 -
   - το παιδί
-  - Ποιάνου είναι α
+  - Ποιάνου είναι αutό το παιδί;
   - l'enfant
 -
   - το αγόρι
+  - Το αγόρι εχεί ένα μαντίλι
   - le garçon ( genre )
 -
   - το κορίτσι
+  - Το κορίτσι εχεί δύο μολύβια
   - la fille ( genre )
 -
   - το τραπέζι
+  - Αυτο το τραπέζι είναι δίκο μου.
   - la table
 -
   - το μαντίλι
+  - Εχω τέσσερα μαντίλια
   - le mouchoir
 -
   - το μολύβι
+  - Αυτό το μολύβι είναι μπλε
   - le crayon
 -
   - τα
