--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ github_username:  bobylito
 # Build settings
 markdown: kramdown
 
-exclude: [node_modules, cordova]
+exclude: [node_modules, cordova, js]
