--- a/_data/flashcards.yml
+++ b/_data/flashcards.yml
@@ -260,3 +260,43 @@
 -
   - το ονείρο
   - le rêve
+-
+  - το πρωί
+  - Το πρωί διαβάζω την εφημερίδα
+  - le matin
+-
+  - πίνω
+  - Πίνω το τσάι
+  - boire
+-
+  - το τσάι
+  - Πίνω το τσάι
+  - le thé
+-
+  - η εφημερίδα
+  - Το πρωί διαβάζω την εφημερίδα
+  - le journal
+-
+  - παίρνω
+  - Παίρνω το λεωφορείο για τη δουλεία
+  - prendre
+-
+  - το λεωφορείο
+  - Παίρνω το λεωφορείο για τη δουλεία
+  - le bus
+-
+  - ο λαός
+  - Ο λαός παίρνει το λεωφορείο
+  - le peuple
+-
+  - ετοιμάζω
+  - Ο Αλέξαντρος ετοιμάζει το φαγιτό
+  - préparer
+-
+  - ετοίμ(ος / n / o)
+  - Ειμαι ετοίμος! Παμε!
+  - pret
+-
+  - το φαγητό
+  - Αυτό το φαγητό είναι δίκο μου
+  - la nourriture / le *manger*
